namespace MiniSocial.Domain.Enums;

public enum ReactionType
{
    Like,
    Love,
    Funny
}